--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "swarmapp-api",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "A javascript wrapper for swarmapp (foursquare) API",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Dummy Test\""
   },
   "repository": {
     "type": "git",
