--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,3 +1,8 @@
+# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
+
+name: Node.js Package
+
 on:
   release:
     types: [created]
@@ -18,38 +23,13 @@ jobs:
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
-    env:
-      NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+          registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm publish
-  release:
-    needs: publish-npm
-    name: Create Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Get version number
-        id: version
-        run: echo "::set-output name=version::$(node -p -e "require('./package.json').version")"
-      - name: Get the latest tag
-        id: get_tag
-        run: echo ::set-output name=TAG::$(git describe --tags $(git rev-list --tags --max-count=1))
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.version.outputs.version }}
-          release_name: Release ${{ steps.version.outputs.version }}
-          body: |
-            Changes in this Release
-            - $(git log --pretty=format:'%s' -n 1)
-          draft: false
-          prerelease: false
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
