--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -51,6 +51,6 @@ jobs:
           release_name: Release ${{ steps.version.outputs.version }}
           body: |
             Changes in this Release
-            - $(git log --pretty=format:'%s' -n 1)
+            - "$(git log --pretty=format:'%s' -n 1)"
           draft: false
           prerelease: false
