--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -41,6 +41,12 @@ jobs:
       - name: Get the latest tag
         id: get_tag
         run: echo ::set-output name=TAG::$(git describe --tags $(git rev-list --tags --max-count=1))
+      - name: Set release notes
+        id: set_release_notes
+        run: |
+          #!/bin/bash
+          release_notes=$(git log --pretty=format:'%s' -n 1)
+          echo "RELEASE_NOTES=$release_notes" >> $GITHUB_ENV
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -51,6 +57,6 @@ jobs:
           release_name: Release ${{ steps.version.outputs.version }}
           body: |
             Changes in this Release
-            - "$(git log --pretty=format:'%s' -n 1)"
+            - ${{ env.RELEASE_NOTES }}
           draft: false
           prerelease: false
