--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "dotenv": "^16.0.3",
+    "form-data": "^4.0.0",
     "lodash": "^4.17.21",
     "querystring": "^0.2.1"
   },
