--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "querystring": "^0.2.1"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "jest": "^29.5.0",
     "shx": "^0.3.4",
     "typescript": "^5.0.3"
