--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -37,10 +37,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Get version number
         id: version
-        run: echo name=version::$(node -p -e "require('./package.json').version") >> $GITHUB_OUTPUT
+        run: echo version=$(node -p -e "require('./package.json').version") >> $GITHUB_OUTPUT
       - name: Get the latest tag
         id: get_tag
-        run: echo name=TAG::$(git describe --tags $(git rev-list --tags --max-count=1)) >> $GITHUB_OUTPUT
+        run: echo TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) >> $GITHUB_OUTPUT
       - name: Set release notes
         id: set_release_notes
         run: |
@@ -53,8 +53,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.version.version }}
-          release_name: Release ${{ steps.version.version }}
+          tag_name: ${{ steps.get_tag.outputs.TAG }}
+          release_name: Release ${{ steps.version.outputs.version }}
           body: |
             Changes in this Release
             - ${{ env.RELEASE_NOTES }}
