--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -8,7 +8,7 @@
     "incremental": true,            /* Enable incremental compilation */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["./node_modules/@types", "./src/cjs/types"],
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
     "moduleResolution": "Node",
