--- a/package.json
+++ b/package.json
@@ -2,66 +2,32 @@
   "name": "swarmapp-api",
   "version": "2.3.7",
   "description": "A javascript wrapper for swarmapp (foursquare) API",
-  "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.mjs",
-  "directories": {
-    "test": "tests"
-  },
+  "main": "lib/index.js",
+  "module": "lib/index.mjs",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
     "clean": "shx rm -rf lib",
-    "build": "npm run clean && npm run build:esm & npm run build:cjs",
-    "build:esm": "tsc && shx mv lib/esm/index.js lib/esm/index.mjs",
-    "build:cjs": "tsc -p ./tsconfig.cjs.json",
-    "prepack": "npm run build",
-    "mytest": "node ./test/test.js"
+    "lint": "tsc",
+    "build": "pnpm run clean && tsup src/index.ts --format cjs,esm --dts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/6degrees/swarmapp-api.git"
-  },
-  "keywords": [
-    "api",
-    "javascript",
-    "js",
-    "swarm",
-    "swarmapp",
-    "foursquare",
-    "wrapper",
-    "checkin"
-  ],
+  "repository": {"type": "git", "url": "git+https://github.com/6degrees/swarmapp-api.git"},
+  "keywords": ["api","javascript","js","swarm","swarmapp","foursquare","wrapper","checkin"],
   "author": "Mohannad F. Otaibi",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/6degrees/swarmapp-api/issues"
-  },
+  "bugs": {"url": "https://github.com/6degrees/swarmapp-api/issues"},
   "homepage": "https://github.com/6degrees/swarmapp-api#readme",
   "dependencies": {
     "axios": "^0.26.1",
-    "dotenv": "^16.0.3",
     "form-data": "^4.0.0",
-    "lodash": "^4.17.21",
-    "querystring": "^0.2.1"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.1",
     "@types/node": "^18.15.11",
     "jest": "^29.5.0",
     "shx": "^0.3.4",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.3"
-  },
-  "files": [
-    "lib/**/*"
-  ],
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./lib/esm/types/index.d.ts",
-        "default": "./lib/esm/index.mjs"
-      },
-      "require": {
-        "types": "./lib/cjs/types/index.d.ts",
-        "default": "./lib/cjs/index.js"
-      }
-    }
-  }
+  } 
 }
