--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
+    "release": "pnpm run build && changeset publish",
     "clean": "shx rm -rf lib && shx rm -rf dist",
     "lint": "tsc",
     "build": "pnpm run clean && tsup src/index.ts --format cjs,esm --dts"
