--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
+    "@types/axios": "^0.14.0",
     "@types/node": "^18.15.11",
     "jest": "^29.5.0",
     "shx": "^0.3.4",
