--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swarmapp-api",
-  "version": "2.7.9",
+  "version": "2.7.10",
   "description": "A javascript wrapper for swarmapp (foursquare) API",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
     "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^18.15.11",
     "jest": "^29.5.0",
     "shx": "^0.3.4",
