--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "swarmapp-api",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "description": "A javascript wrapper for swarmapp (foursquare) API",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
     "release": "pnpm run build && changeset publish",
     "clean": "shx rm -rf lib && shx rm -rf dist",
     "lint": "tsc",
-    "build": "pnpm run clean && tsup src/index.ts --format cjs,esm --dts"
+    "build": "pnpm run clean && tsup src/index.ts --format cjs,esm --dts",
+    "run-sample": "ts-node examples/example.ts"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,8 @@
   "keywords": [
     "api",
     "javascript",
+    "typescript",
+    "ts",
     "js",
     "swarm",
     "swarmapp",
@@ -34,6 +36,7 @@
   "homepage": "https://github.com/6degrees/swarmapp-api#readme",
   "dependencies": {
     "axios": "^0.26.1",
+    "dotenv": "^16.3.1",
     "form-data": "^4.0.0",
     "lodash": "^4.17.21"
   },
@@ -43,6 +46,7 @@
     "@types/node": "^18.15.11",
     "jest": "^29.5.0",
     "shx": "^0.3.4",
+    "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^5.0.3"
   }
