--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swarmapp-api",
+  "name": "@flowdegree/swarmapp-api",
   "version": "2.9.1",
   "description": "A javascript wrapper for swarmapp (foursquare) API",
   "main": "dist/index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/6degrees/swarmapp-api.git"
+    "url": "git+https://github.com/automaniacs/swarmapp-api.git"
   },
   "keywords": [
     "api",
@@ -33,7 +33,7 @@
   "bugs": {
     "url": "https://github.com/6degrees/swarmapp-api/issues"
   },
-  "homepage": "https://github.com/6degrees/swarmapp-api#readme",
+  "homepage": "https://github.com/automaniacs/swarmapp-api#readme",
   "dependencies": {
     "axios": "^0.26.1",
     "dotenv": "^16.3.1",
