--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flowdegree/swarmapp-api",
-  "version": "2.11.3",
+  "version": "2.12.0",
   "description": "A javascript wrapper for swarmapp (foursquare) API",
   "main": "dist/index.js",
   "types": "./dist/index.d.ts",
@@ -10,7 +10,7 @@
     "clean": "shx rm -rf lib && shx rm -rf dist",
     "lint": "tsc",
     "build": "pnpm run clean && tsup src/index.ts --format cjs,esm --dts",
-    "test:example": "ts-node examples/example.ts"
+    "test:example": "ts-node test/example.ts"
   },
   "publishConfig": {
     "access": "public"
